--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,60 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environments
 .venv/
-*txt
-*doc
-*log
+venv/
+ENV/
+env/
+virtualenv/
+
+# Credentials - IMPORTANT
+.env
+*.env
+gcp-credentials.json
+
+# Temporary files and logs
+*.log
+*.swp
+*~
+temp-audio.m4a
+temp/
+tmp/
+
+# Output directories
+outputs/
+
+# IDE / Editor specific
+.idea/
+.vscode/
+.claude/
+
+# OS-specific
+.DS_Store
