fix: Correct video rendering bugs and improve data pipeline
This commit addresses several critical bugs in the video generation process and refactors the data pipeline for greater reliability and efficiency.

Key changes:
- Fixed a text rendering bug causing the 'SPEAKING' tag and other text to be clipped by correctly calculating canvas size.
- Corrected the positioning logic for the 'SPEAKING' tag to ensure it is always fully visible.
- Fixed a color channel mismatch (RGB vs BGR) that caused rendered text to appear in the wrong color.
- Refactored the script writer to use a more efficient 'delta' update for game state, only including state objects when they change.
- Updated the audio generator to correctly use player-specific voices for all player actions (proposals, confirmations, MVP speeches), ensuring voice consistency.
- Hardcoded the subtitle generator to use the local Whisper model, removing the dependency on Google Cloud STT.

--- a/data/layout.yaml
+++ b/data/layout.yaml
@@ -51,10 +51,10 @@ avatar:
   border_width: 6
 
 speaker_tag: # The text shown above a speaking player
-  text: "SPEAKING"
+  text: "speaking"
   font_size: 36
   color: "#FFD700" # Gold, to match the border
-  offset_from_avatar: [-25, -75] # (x, y) offset from the avatar's top-left corner
+  offset_from_avatar: [25, -80] # (x, y) offset from the avatar's top-left corner
 
 player_tag: # The text showing the player's ID
   font_size: 36
