feat: Overhaul agent prompting and Game Master logic
- Refactors all evil role prompts to be direct, step-by-step instructions, removing ambiguous protocols.
- Implements a "Public vs. Secret" framework to guide agent behavior.
- Creates a dedicated, strict prompt for public discussions to prevent internal thought leakage.
- Hardens Game Master logic by implementing a non-negotiable "Assassin Rule" to enforce quest failure, bypassing faulty agent actions.
- Fixes bugs related to loading action prompts in the Game Master.

--- a/data/layout.yaml
+++ b/data/layout.yaml
@@ -29,19 +29,19 @@ player_positions:
 # Maps a player_id to a specific avatar image file in the avatar_dir.
 player_avatars:
   - player_id: 0
-    avatar_file: "gemini.webp"
+    avatar_file: "openai.webp"
   - player_id: 1
     avatar_file: "gemini.webp"
   - player_id: 2
-    avatar_file: "gemini.webp"
+    avatar_file: "deepseek.webp"
   - player_id: 3
-    avatar_file: "gemini.webp"
+    avatar_file: "xai.webp"
   - player_id: 4
-    avatar_file: "gemini.webp"
+    avatar_file: "anthropic.webp"
   - player_id: 5
-    avatar_file: "gemini.webp"
+    avatar_file: "moonshot.webp"
   - player_id: 6
-    avatar_file: "gemini.webp"
+    avatar_file: "dashscope.webp"
 
 # --- Visual Element Styles ---
 avatar:
