--- a/config.yaml
+++ b/config.yaml
@@ -3,19 +3,19 @@
 
 player_setup:
   - player_id: 0
-    model: "gemini/gemini-2.5-pro"
+    model: "openai/gpt-5"
   - player_id: 1
     model: "gemini/gemini-2.5-pro"
   - player_id: 2
-    model: "gemini/gemini-2.5-pro"
+    model: "deepseek/deepseek-reasoner"
   - player_id: 3
-    model: "gemini/gemini-2.5-pro"
+    model: "xai/grok-4-latest"
   - player_id: 4
-    model: "gemini/gemini-2.5-pro"
+    model: "anthropic/claude-opus-4-1-20250805"
   - player_id: 5
-    model: "gemini/gemini-2.5-pro"
+    model: "moonshot/kimi-k2-turbo-preview"
   - player_id: 6
-    model: "gemini/gemini-2.5-pro"
+    model: "dashscope/qwen-max"
 
 # Role and game structure configuration for different game sizes
 roles:
